--- a/app/src/main/res/layout/activity_student_home.xml
+++ b/app/src/main/res/layout/activity_student_home.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="noonight.study.students_record_book.mvp.view.StudentHomeActivity">
+    tools:context="noonight.study.students_record_book.mvp.view.home.StudentHomeActivity">
+
+    <FrameLayout
+        android:id="@+id/home_fragment_container"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.constraint.ConstraintLayout>
